sonia/bang/bang.output
Terminals unused in grammar

    COMMENT_BEGIN
    COMMENT_END
    OPERATOR_TERM
    "`->*`"
    "`.*`"
    "`++`"
    "`--`"
    "`<<`"
    "`>>`"
    "`<=`"
    "`>=`"
    "`+=`"
    "`-=`"
    "`*=`"
    "`/=`"
    "`%=`"
    "`<<=`"
    "`>>=`"
    "`&=`"
    "`|=`"
    "`^=`"
    "`<`"
    "`>`"
    "`/`"
    "`%`"
    "`^`"
    "`$`"
    "`?`"
    "`#`"
    AUTO
    THROW
    SIZEOF
    LOWEST
    EXTENDS


Grammar

    0 $accept: begin "end of file"

    1 begin: statement_any "end of file"
    2      | finished-statement-any "end of file"

    3 statement_any: %empty
    4              | statement
    5              | finished-statement-any statement

    6 finished-statement-any: finished-statement
    7                       | finished-statement-any "`;`"
    8                       | finished-statement-any finished-statement
    9                       | statement_any "`;`"

   10 statement: EXTERN VAR identifier "`:`" type-expr
   11          | EXTERN "`fn`" fn-decl
   12          | INCLUDE STRING
   13          | fn-start-decl fn-name "`(`" parameter-list-opt "`)`" "`=>`" syntax-expression
   14          | generic-statement
   15          | STRUCT struct-decl

   16 let-decl: let-decl-start-with-opt-type
   17         | let-decl-start-with-opt-type "`=`" pack-expression

   18 let-decl-start: identifier
   19               | "weak modifier" identifier

   20 let-decl-start-with-opt-type: let-decl-start
   21                             | let-decl-start "`:`" type-expr

   22 infunction-statement-any: %empty
   23                         | infunction-statement
   24                         | finished-infunction-statement-any infunction-statement

   25 finished-infunction-statement-any: finished-statement
   26                                  | finished-infunction-statement-any "`;`"
   27                                  | finished-infunction-statement-any finished-statement
   28                                  | infunction-statement-any "`;`"

   29 braced-statements: "`{`" infunction-statement-set "`}`"

   30 finished-statement: "`while`" syntax-expression braced-statements
   31                   | "`while`" syntax-expression "`;`" syntax-expression braced-statements
   32                   | "`for`" syntax-expression "`in`" syntax-expression braced-statements
   33                   | "`if`" syntax-expression braced-statements
   34                   | "`if`" syntax-expression braced-statements "`else`" braced-statements
   35                   | fn-start-decl fn-decl braced-statements
   36                   | STRUCT qname braced-statements
   37                   | STRUCT qname "`(`" parameter-list-opt "`)`" braced-statements
   38                   | ENUM enum-decl

   39 infunction-statement-set: infunction-statement-any
   40                         | finished-infunction-statement-any

   41 generic-statement: LET let-decl
   42                  | USING using-decl
   43                  | compound-expression
   44                  | syntax-expression "`=`" syntax-expression

   45 infunction-statement: generic-statement
   46                     | "`break`"
   47                     | "`continue`"
   48                     | "`return`"
   49                     | "`return`" syntax-expression

   50 identifier: IDENTIFIER

   51 internal-identifier: CONTEXT_IDENTIFIER

   52 qname: "`::`" identifier
   53      | identifier
   54      | qname "`::`" identifier

   55 fn-start-decl: "`fn`"
   56              | INLINE "`fn`"

   57 fn-name: qname
   58        | "`new`"

   59 fn-decl: fn-name "`(`" parameter-list-opt "`)`"
   60        | fn-name "`(`" parameter-list-opt "`)`" "`~>`" type-expr
   61        | fn-name "`(`" parameter-list-opt "`)`" "`->`" pattern

   62 enum-decl: qname "`{`" case-list-opt "`}`"

   63 case-list-opt: %empty
   64              | case-list

   65 case-list: case-decl
   66          | case-list "," case-decl

   67 case-decl: identifier

   68 struct-decl: qname "`=>`" "`(`" field-list-opt "`)`"
   69            | qname "`(`" parameter-list-opt "`)`" "`=>`" "`(`" field-list-opt "`)`"

   70 using-decl: qname "`=>`" syntax-expression
   71           | qname "`(`" parameter-list-opt "`)`" "`=>`" syntax-expression

   72 expression-list: syntax-expression
   73                | expression-list "," syntax-expression

   74 argument-list-opt: %empty
   75                  | argument-list

   76 argument-list: argument
   77              | argument-list "," argument

   78 argument: argument-name syntax-expression
   79         | syntax-expression

   80 argument-name: identifier "`=`"
   81              | identifier "`:`"

   82 field-list-opt: %empty
   83               | field-list

   84 field-list: field
   85           | field-list "," field

   86 field-default-value-opt: %empty
   87                        | "`=`" syntax-expression

   88 field: identifier "`:`" type-expr field-default-value-opt
   89      | identifier "`=>`" syntax-expression

   90 parameter-list-opt: %empty
   91                   | parameter-list

   92 parameter-list: parameter-decl
   93               | parameter-list "," parameter-decl

   94 internal-identifier-opt: %empty
   95                        | internal-identifier

   96 parameter-default-value-opt: %empty
   97                            | "`=`" syntax-expression

   98 parameter-decl: identifier internal-identifier-opt "`:`" pattern-mod parameter-default-value-opt
   99               | internal-identifier "`:`" pattern-mod parameter-default-value-opt
  100               | pattern-mod parameter-default-value-opt
  101               | identifier internal-identifier-opt "`:`" constraint-expression parameter-default-value-opt
  102               | internal-identifier "`:`" constraint-expression parameter-default-value-opt
  103               | constraint-expression parameter-default-value-opt

  104 constraint-expression-mod: "`~`"
  105                          | "`~`" "constexpr modifier"
  106                          | "`~`" "runctime modifier"

  107 constraint-expression: constraint-expression-mod type-expr
  108                      | constraint-expression-mod type-expr "`...`"

  109 subpatterns-opt: %empty
  110                | subpatterns

  111 subpatterns: "`(`" pattern-list "`)`"

  112 pattern-list: pattern-field
  113             | pattern-list "," pattern-field

  114 pattern-field: pattern-sfx
  115              | "`_`" "`:`" pattern-sfx
  116              | identifier "`:`" pattern-sfx
  117              | internal-identifier "`:`" pattern-sfx
  118              | "`(`" syntax-expression "`)`" "`:`" pattern-sfx

  119 pattern-mod: pattern-sfx
  120            | "constexpr modifier" pattern-sfx
  121            | "runctime modifier" pattern-sfx
  122            | "typename modifier" pattern-sfx

  123 pattern-sfx: pattern
  124            | pattern "`...`"
  125            | "`...`"

  126 pattern: qname subpatterns-opt concept-expression-list-opt
  127        | internal-identifier concept-expression-list-opt
  128        | "`_`" subpatterns concept-expression-list-opt
  129        | "`(`" syntax-expression "`)`" concept-expression-list-opt
  130        | "`_`" concept-expression-list-opt
  131        | concept-expression-list

  132 concept-expression: "`@`" qname

  133 concept-expression-list-opt: %empty
  134                            | concept-expression-list

  135 concept-expression-list: concept-expression
  136                        | concept-expression-list concept-expression

  137 syntax-expression: CONTEXT_IDENTIFIER
  138                  | CT_IDENTIFIER
  139                  | syntax-expression-wo-ii

  140 syntax-expression-wo-ii: "nil"
  141                        | "true"
  142                        | "false"
  143                        | INTEGER
  144                        | DECIMAL
  145                        | DECIMAL_S
  146                        | INTEGER_INDEX
  147                        | STRING
  148                        | RESERVED_IDENTIFIER
  149                        | qname
  150                        | "`(`" "`)`"
  151                        | "`(`" "`:`" syntax-expression "`)`"
  152                        | "`(`" pack-expression "`)`"
  153                        | "`[`" expression-list "`]`"
  154                        | "`[[`" expression-list "`]]`"
  155                        | syntax-expression "`[`" syntax-expression "`]`"
  156                        | "`.`" identifier
  157                        | syntax-expression "`.`" identifier
  158                        | syntax-expression "`.`" apostrophe-expression
  159                        | syntax-expression INTEGER_INDEX
  160                        | "`!`" syntax-expression
  161                        | "`*`" syntax-expression
  162                        | syntax-expression "`+`" syntax-expression
  163                        | syntax-expression "`-`" syntax-expression
  164                        | syntax-expression "`==`" syntax-expression
  165                        | syntax-expression "`!=`" syntax-expression
  166                        | syntax-expression "`..`" syntax-expression
  167                        | syntax-expression "`&`" syntax-expression
  168                        | syntax-expression "`|`" syntax-expression
  169                        | syntax-expression "`&&`" syntax-expression
  170                        | syntax-expression "`||`" syntax-expression
  171                        | apostrophe-expression
  172                        | new-expression
  173                        | compound-expression
  174                        | lambda-expression

  175 apostrophe-expression: "APOSTROPHE" syntax-expression "APOSTROPHE"

  176 new-expression: "`new`" qname
  177               | "`new`" apostrophe-expression
  178               | "`new`" qname "`(`" argument-list-opt "`)`"
  179               | "`new`" apostrophe-expression "`(`" argument-list-opt "`)`"

  180 call-expression: qname "`(`" pack-expression-opt "`)`"
  181                | call-expression "`(`" pack-expression "`)`"
  182                | apostrophe-expression "`(`" pack-expression "`)`"
  183                | lambda-expression "`(`" pack-expression "`)`"

  184 lambda-expression: fn-start-decl "`(`" parameter-list-opt "`)`" braced-statements
  185                  | fn-start-decl "`(`" parameter-list-opt "`)`" "`->`" type-expr braced-statements

  186 pack-expression-opt: %empty
  187                    | pack-expression

  188 pack-expression: syntax-expression
  189                | identifier "`:`" syntax-expression
  190                | pack-expression "," syntax-expression
  191                | pack-expression "," identifier "`:`" syntax-expression

  192 compound-expression: syntax-expression "`...`"
  193                    | call-expression

  194 type-expr: qname
  195          | call-expression
  196          | CONTEXT_IDENTIFIER
  197          | "`[`" type-expr "`]`"
  198          | "`(`" "`)`"
  199          | "`(`" pack-expression "`)`"
  200          | type-expr "`[`" INTEGER "`]`"
  201          | type-expr "`|`" type-expr
  202          | type-expr "`->`" type-expr


Terminals, with rules where they appear

    "end of file" (0) 0 1 2
    error (256)
    COMMENT_BEGIN (258)
    COMMENT_END (259)
    STRING <sonia::lang::bang::annotated_string_view> (260) 12 147
    IDENTIFIER <sonia::lang::bang::annotated_string_view> (261) 50
    CONTEXT_IDENTIFIER <sonia::lang::bang::annotated_string_view> (262) 51 137 196
    RESERVED_IDENTIFIER <sonia::lang::bang::annotated_string_view> (263) 148
    CT_IDENTIFIER <sonia::lang::bang::annotated_string_view> (264) 138
    INTEGER_INDEX <sonia::lang::bang::annotated_string_view> (265) 146 159
    INTEGER <sonia::lang::bang::annotated_integer> (266) 143 200
    DECIMAL <sonia::lang::bang::annotated_decimal> (267) 144
    DECIMAL_S <sonia::lang::bang::annotated_decimal> (268) 145
    OPERATOR_TERM <sonia::string_view> (269)
    "`=`" <sonia::lang::lex::resource_location> (270) 17 44 80 87 97
    "APOSTROPHE" (271) 175
    "`@`" (272) 132
    "`_`" <sonia::lang::lex::resource_location> (273) 115 128 130
    "`->*`" (274)
    "`->`" (275) 61 185 202
    "`=>`" (276) 13 68 69 70 71 89
    "`~>`" (277) 60
    "`.*`" (278)
    "`++`" (279)
    "`--`" (280)
    "`<<`" (281)
    "`>>`" (282)
    "`<=`" (283)
    "`>=`" (284)
    "`==`" <sonia::lang::lex::resource_location> (285) 164
    "`!=`" <sonia::lang::lex::resource_location> (286) 165
    "`&&`" <sonia::lang::lex::resource_location> (287) 169
    "`||`" <sonia::lang::lex::resource_location> (288) 170
    "`..`" <sonia::lang::lex::resource_location> (289) 166
    "`...`" <sonia::lang::lex::resource_location> (290) 108 124 125 192
    "`+=`" (291)
    "`-=`" (292)
    "`*=`" (293)
    "`/=`" (294)
    "`%=`" (295)
    "`<<=`" (296)
    "`>>=`" (297)
    "`&=`" (298)
    "`|=`" (299)
    "`^=`" (300)
    "`:`" (301) 10 21 81 88 98 99 101 102 115 116 117 118 151 189 191
    "`::`" (302) 52 54
    "`(`" <sonia::lang::lex::resource_location> (303) 13 37 59 60 61 68 69 71 111 118 129 150 151 152 178 179 180 181 182 183 184 185 198 199
    "`)`" (304) 13 37 59 60 61 68 69 71 111 118 129 150 151 152 178 179 180 181 182 183 184 185 198 199
    "`{`" <sonia::lang::lex::resource_location> (305) 29 62
    "`}`" (306) 29 62
    "`[`" <sonia::lang::lex::resource_location> (307) 153 155 197 200
    "`]`" (308) 153 155 197 200
    "`[[`" <sonia::lang::lex::resource_location> (309) 154
    "`]]`" (310) 154
    "`<`" (311)
    "`>`" (312)
    "`;`" (313) 7 9 26 28 31
    "`.`" <sonia::lang::lex::resource_location> (314) 156 157 158
    "`+`" <sonia::lang::lex::resource_location> (315) 162
    "`-`" <sonia::lang::lex::resource_location> (316) 163
    "`*`" <sonia::lang::lex::resource_location> (317) 161
    "`/`" (318)
    "`%`" (319)
    "`&`" <sonia::lang::lex::resource_location> (320) 167
    "`|`" <sonia::lang::lex::resource_location> (321) 168 201
    "`!`" <sonia::lang::lex::resource_location> (322) 160
    "`~`" (323) 104 105 106
    "`^`" (324)
    "," (325) 66 73 77 85 93 113 190 191
    "`$`" (326)
    "`?`" (327)
    "`#`" (328)
    LET (329) 41
    VAR (330) 10
    EXTERN (331) 10 11
    "`new`" <sonia::lang::lex::resource_location> (332) 58 176 177 178 179
    "`while`" (333) 30 31
    "`for`" (334) 32
    "`in`" (335) 32
    "`if`" (336) 33 34
    "`else`" (337) 34
    "`continue`" <sonia::lang::lex::resource_location> (338) 47
    "`break`" <sonia::lang::lex::resource_location> (339) 46
    "`return`" <sonia::lang::lex::resource_location> (340) 48 49
    AUTO (341)
    USING (342) 42
    THROW (343)
    SIZEOF (344)
    LOWEST (345)
    DEREF (346)
    INCLUDE (347) 12
    INLINE (348) 56
    "`fn`" <sonia::lang::lex::resource_location> (349) 11 55 56
    ENUM (350) 38
    STRUCT (351) 15 36 37
    EXTENDS (352)
    "weak modifier" (353) 19
    "typename modifier" (354) 122
    "constexpr modifier" (355) 105 120
    "runctime modifier" (356) 106 121
    "nil" <annotated_nil> (357) 140
    "true" <annotated_bool> (358) 141
    "false" <annotated_bool> (359) 142


Nonterminals, with rules where they appear

    $accept (105)
        on left: 0
    begin (106)
        on left: 1 2
        on right: 0
    statement_any <managed_statement_list> (107)
        on left: 3 4 5
        on right: 1 9
    finished-statement-any <managed_statement_list> (108)
        on left: 6 7 8 9
        on right: 2 5 7 8
    statement <statement> (109)
        on left: 10 11 12 13 14 15
        on right: 4 5
    let-decl <let_statement> (110)
        on left: 16 17
        on right: 41
    let-decl-start <let_statement> (111)
        on left: 18 19
        on right: 20 21
    let-decl-start-with-opt-type <let_statement> (112)
        on left: 20 21
        on right: 16 17
    infunction-statement-any <managed_statement_list> (113)
        on left: 22 23 24
        on right: 28 39
    finished-infunction-statement-any <managed_statement_list> (114)
        on left: 25 26 27 28
        on right: 24 26 27 40
    braced-statements <managed_statement_list> (115)
        on left: 29
        on right: 30 31 32 33 34 35 36 37 184 185
    finished-statement <finished_statement_type> (116)
        on left: 30 31 32 33 34 35 36 37 38
        on right: 6 8 25 27
    infunction-statement-set <managed_statement_list> (117)
        on left: 39 40
        on right: 29
    generic-statement <generic_statement_type> (118)
        on left: 41 42 43 44
        on right: 14 45
    infunction-statement <statement> (119)
        on left: 45 46 47 48 49
        on right: 23 24
    identifier <sonia::lang::bang::annotated_identifier> (120)
        on left: 50
        on right: 10 18 19 52 53 54 67 80 81 88 89 98 101 116 156 157 189 191
    internal-identifier <sonia::lang::bang::annotated_identifier> (121)
        on left: 51
        on right: 95 99 102 117 127
    qname <sonia::lang::bang::annotated_qname> (122)
        on left: 52 53 54
        on right: 36 37 54 57 62 68 69 70 71 126 132 149 176 178 180 194
    fn-start-decl <fn_kind> (123)
        on left: 55 56
        on right: 13 35 184 185
    fn-name <sonia::lang::bang::annotated_qname> (124)
        on left: 57 58
        on right: 13 59 60 61
    fn-decl <fn_pure_t> (125)
        on left: 59 60 61
        on right: 11 35
    enum-decl <enum_decl> (126)
        on left: 62
        on right: 38
    case-list-opt <std::vector<sonia::lang::bang::identifier>> (127)
        on left: 63 64
        on right: 62
    case-list <std::vector<sonia::lang::bang::identifier>> (128)
        on left: 65 66
        on right: 64 66
    case-decl <sonia::lang::bang::identifier> (129)
        on left: 67
        on right: 65 66
    struct-decl <struct_decl> (130)
        on left: 68 69
        on right: 15
    using-decl <using_decl> (131)
        on left: 70 71
        on right: 42
    expression-list <expression_list_t> (132)
        on left: 72 73
        on right: 73 153 154
    argument-list-opt <named_expression_list_t> (133)
        on left: 74 75
        on right: 178 179
    argument-list <named_expression_list_t> (134)
        on left: 76 77
        on right: 75 77
    argument <named_expression_t> (135)
        on left: 78 79
        on right: 76 77
    argument-name <sonia::lang::bang::annotated_identifier> (136)
        on left: 80 81
        on right: 78
    field-list-opt <field_list_t> (137)
        on left: 82 83
        on right: 68 69
    field-list <field_list_t> (138)
        on left: 84 85
        on right: 83 85
    field-default-value-opt <sonia::optional<syntax_expression_t>> (139)
        on left: 86 87
        on right: 88
    field <field_t> (140)
        on left: 88 89
        on right: 84 85
    parameter-list-opt <parameter_list_t> (141)
        on left: 90 91
        on right: 13 37 59 60 61 69 71 184 185
    parameter-list <parameter_list_t> (142)
        on left: 92 93
        on right: 91 93
    internal-identifier-opt <sonia::lang::bang::annotated_identifier> (143)
        on left: 94 95
        on right: 98 101
    parameter-default-value-opt <sonia::optional<syntax_expression_t>> (144)
        on left: 96 97
        on right: 98 99 100 101 102 103
    parameter-decl <parameter_t> (145)
        on left: 98 99 100 101 102 103
        on right: 92 93
    constraint-expression-mod <parameter_constraint_modifier_t> (146)
        on left: 104 105 106
        on right: 107 108
    constraint-expression <std::pair<syntax_expression_t, parameter_constraint_modifier_t>> (147)
        on left: 107 108
        on right: 101 102 103
    subpatterns-opt <pattern_list_t> (148)
        on left: 109 110
        on right: 126
    subpatterns <pattern_list_t> (149)
        on left: 111
        on right: 110 128
    pattern-list <pattern_list_t> (150)
        on left: 112 113
        on right: 111 113
    pattern-field <pattern_t::field> (151)
        on left: 114 115 116 117 118
        on right: 112 113
    pattern-mod <std::pair<pattern_t, parameter_constraint_modifier_t>> (152)
        on left: 119 120 121 122
        on right: 98 99 100
    pattern-sfx <std::pair<pattern_t, parameter_constraint_modifier_t>> (153)
        on left: 123 124 125
        on right: 114 115 116 117 118 119 120 121 122
    pattern <pattern_t> (154)
        on left: 126 127 128 129 130 131
        on right: 61 123 124
    concept-expression <syntax_expression_t> (155)
        on left: 132
        on right: 135 136
    concept-expression-list-opt <concept_expression_list_t> (156)
        on left: 133 134
        on right: 126 127 128 129 130
    concept-expression-list <concept_expression_list_t> (157)
        on left: 135 136
        on right: 131 134 136
    syntax-expression <syntax_expression_t> (158)
        on left: 137 138 139
        on right: 13 30 31 32 33 34 44 49 70 71 72 73 78 79 87 89 97 118 129 151 155 157 158 159 160 161 162 163 164 165 166 167 168 169 170 175 188 189 190 191 192
    syntax-expression-wo-ii <syntax_expression_t> (159)
        on left: 140 141 142 143 144 145 146 147 148 149 150 151 152 153 154 155 156 157 158 159 160 161 162 163 164 165 166 167 168 169 170 171 172 173 174
        on right: 139
    apostrophe-expression <syntax_expression_t> (160)
        on left: 175
        on right: 158 171 177 179 182
    new-expression <syntax_expression_t> (161)
        on left: 176 177 178 179
        on right: 172
    call-expression <syntax_expression_t> (162)
        on left: 180 181 182 183
        on right: 181 193 195
    lambda-expression <syntax_expression_t> (163)
        on left: 184 185
        on right: 174 183
    pack-expression-opt <named_expression_list_t> (164)
        on left: 186 187
        on right: 180
    pack-expression <named_expression_list_t> (165)
        on left: 188 189 190 191
        on right: 17 152 181 182 183 187 190 191 199
    compound-expression <syntax_expression_t> (166)
        on left: 192 193
        on right: 43 173
    type-expr <syntax_expression_t> (167)
        on left: 194 195 196 197 198 199 200 201 202
        on right: 10 21 60 88 107 108 185 197 200 201 202


State 0

    0 $accept: . begin "end of file"

    STRING               shift, and go to state 1
    IDENTIFIER           shift, and go to state 2
    CONTEXT_IDENTIFIER   shift, and go to state 3
    RESERVED_IDENTIFIER  shift, and go to state 4
    CT_IDENTIFIER        shift, and go to state 5
    INTEGER_INDEX        shift, and go to state 6
    INTEGER              shift, and go to state 7
    DECIMAL              shift, and go to state 8
    DECIMAL_S            shift, and go to state 9
    "APOSTROPHE"         shift, and go to state 10
    "`::`"               shift, and go to state 11
    "`(`"                shift, and go to state 12
    "`[`"                shift, and go to state 13
    "`[[`"               shift, and go to state 14
    "`.`"                shift, and go to state 15
    "`*`"                shift, and go to state 16
    "`!`"                shift, and go to state 17
    LET                  shift, and go to state 18
    EXTERN               shift, and go to state 19
    "`new`"              shift, and go to state 20
    "`while`"            shift, and go to state 21
    "`for`"              shift, and go to state 22
    "`if`"               shift, and go to state 23
    USING                shift, and go to state 24
    INCLUDE              shift, and go to state 25
    INLINE               shift, and go to state 26
    "`fn`"               shift, and go to state 27
    ENUM                 shift, and go to state 28
    STRUCT               shift, and go to state 29
    "nil"                shift, and go to state 30
    "true"               shift, and go to state 31
    "false"              shift, and go to state 32

    $default  reduce using rule 3 (statement_any)

    begin                    go to state 33
    statement_any            go to state 34
    finished-statement-any   go to state 35
    statement                go to state 36
    finished-statement       go to state 37
    generic-statement        go to state 38
    identifier               go to state 39
    qname                    go to state 40
    fn-start-decl            go to state 41
    syntax-expression        go to state 42
    syntax-expression-wo-ii  go to state 43
    apostrophe-expression    go to state 44
    new-expression           go to state 45
    call-expression          go to state 46
    lambda-expression        go to state 47
    compound-expression      go to state 48


State 1

  147 syntax-expression-wo-ii: STRING .

    $default  reduce using rule 147 (syntax-expression-wo-ii)


State 2

   50 identifier: IDENTIFIER .

    $default  reduce using rule 50 (identifier)


State 3

  137 syntax-expression: CONTEXT_IDENTIFIER .

    $default  reduce using rule 137 (syntax-expression)


State 4

  148 syntax-expression-wo-ii: RESERVED_IDENTIFIER .

    $default  reduce using rule 148 (syntax-expression-wo-ii)


State 5

  138 syntax-expression: CT_IDENTIFIER .

    $default  reduce using rule 138 (syntax-expression)


State 6

  146 syntax-expression-wo-ii: INTEGER_INDEX .

    $default  reduce using rule 146 (syntax-expression-wo-ii)


State 7

  143 syntax-expression-wo-ii: INTEGER .

    $default  reduce using rule 143 (syntax-expression-wo-ii)


State 8

  144 syntax-expression-wo-ii: DECIMAL .

    $default  reduce using rule 144 (syntax-expression-wo-ii)


State 9

  145 syntax-expression-wo-ii: DECIMAL_S .

    $default  reduce using rule 145 (syntax-expression-wo-ii)


State 10

  175 apostrophe-expression: "APOSTROPHE" . syntax-expression "APOSTROPHE"

    STRING               shift, and go to state 1
    IDENTIFIER           shift, and go to state 2
    CONTEXT_IDENTIFIER   shift, and go to state 3
    RESERVED_IDENTIFIER  shift, and go to state 4
    CT_IDENTIFIER        shift, and go to state 5
    INTEGER_INDEX        shift, and go to state 6
    INTEGER              shift, and go to state 7
    DECIMAL              shift, and go to state 8
    DECIMAL_S            shift, and go to state 9
    "APOSTROPHE"         shift, and go to state 10
    "`::`"               shift, and go to state 11
    "`(`"                shift, and go to state 12
    "`[`"                shift, and go to state 13
    "`[[`"               shift, and go to state 14
    "`.`"                shift, and go to state 15
    "`*`"                shift, and go to state 16
    "`!`"                shift, and go to state 17
    "`new`"              shift, and go to state 20
    INLINE               shift, and go to state 26
    "`fn`"               shift, and go to state 27
    "nil"                shift, and go to state 30
    "true"               shift, and go to state 31
    "false"              shift, and go to state 32

    identifier               go to state 39
    qname                    go to state 40
    fn-start-decl            go to state 49
    syntax-expression        go to state 50
    syntax-expression-wo-ii  go to state 43
    apostrophe-expression    go to state 44
    new-expression           go to state 45
    call-expression          go to state 46
    lambda-expression        go to state 47
    compound-expression      go to state 51


State 11

   52 qname: "`::`" . identifier

    IDENTIFIER  shift, and go to state 2

    identifier  go to state 52


State 12

  150 syntax-expression-wo-ii: "`(`" . "`)`"
  151                        | "`(`" . "`:`" syntax-expression "`)`"
  152                        | "`(`" . pack-expression "`)`"

    STRING               shift, and go to state 1
    IDENTIFIER           shift, and go to state 2
    CONTEXT_IDENTIFIER   shift, and go to state 3
    RESERVED_IDENTIFIER  shift, and go to state 4
    CT_IDENTIFIER        shift, and go to state 5
    INTEGER_INDEX        shift, and go to state 6
    INTEGER              shift, and go to state 7
    DECIMAL              shift, and go to state 8
    DECIMAL_S            shift, and go to state 9
    "APOSTROPHE"         shift, and go to state 10
    "`:`"                shift, and go to state 53
    "`::`"               shift, and go to state 11
    "`(`"                shift, and go to state 12
    "`)`"                shift, and go to state 54
    "`[`"                shift, and go to state 13
    "`[[`"               shift, and go to state 14
    "`.`"                shift, and go to state 15
    "`*`"                shift, and go to state 16
    "`!`"                shift, and go to state 17
    "`new`"              shift, and go to state 20
    INLINE               shift, and go to state 26
    "`fn`"               shift, and go to state 27
    "nil"                shift, and go to state 30
    "true"               shift, and go to state 31
    "false"              shift, and go to state 32

    identifier               go to state 55
    qname                    go to state 40
    fn-start-decl            go to state 49
    syntax-expression        go to state 56
    syntax-expression-wo-ii  go to state 43
    apostrophe-expression    go to state 44
    new-expression           go to state 45
    call-expression          go to state 46
    lambda-expression        go to state 47
    pack-expression          go to state 57
    compound-expression      go to state 51


State 13

  153 syntax-expression-wo-ii: "`[`" . expression-list "`]`"

    STRING               shift, and go to state 1
    IDENTIFIER           shift, and go to state 2
    CONTEXT_IDENTIFIER   shift, and go to state 3
    RESERVED_IDENTIFIER  shift, and go to state 4
    CT_IDENTIFIER        shift, and go to state 5
    INTEGER_INDEX        shift, and go to state 6
    INTEGER              shift, and go to state 7
    DECIMAL              shift, and go to state 8
    DECIMAL_S            shift, and go to state 9
    "APOSTROPHE"         shift, and go to state 10
    "`::`"               shift, and go to state 11
    "`(`"                shift, and go to state 12
    "`[`"                shift, and go to state 13
    "`[[`"               shift, and go to state 14
    "`.`"                shift, and go to state 15
    "`*`"                shift, and go to state 16
    "`!`"                shift, and go to state 17
    "`new`"              shift, and go to state 20
    INLINE               shift, and go to state 26
    "`fn`"               shift, and go to state 27
    "nil"                shift, and go to state 30
    "true"               shift, and go to state 31
    "false"              shift, and go to state 32

    identifier               go to state 39
    qname                    go to state 40
    fn-start-decl            go to state 49
    expression-list          go to state 58
    syntax-expression        go to state 59
    syntax-expression-wo-ii  go to state 43
    apostrophe-expression    go to state 44
    new-expression           go to state 45
    call-expression          go to state 46
    lambda-expression        go to state 47
    compound-expression      go to state 51


State 14

  154 syntax-expression-wo-ii: "`[[`" . expression-list "`]]`"

    STRING               shift, and go to state 1
    IDENTIFIER           shift, and go to state 2
    CONTEXT_IDENTIFIER   shift, and go to state 3
    RESERVED_IDENTIFIER  shift, and go to state 4
    CT_IDENTIFIER        shift, and go to state 5
    INTEGER_INDEX        shift, and go to state 6
    INTEGER              shift, and go to state 7
    DECIMAL              shift, and go to state 8
    DECIMAL_S            shift, and go to state 9
    "APOSTROPHE"         shift, and go to state 10
    "`::`"               shift, and go to state 11
    "`(`"                shift, and go to state 12
    "`[`"                shift, and go to state 13
    "`[[`"               shift, and go to state 14
    "`.`"                shift, and go to state 15
    "`*`"                shift, and go to state 16
    "`!`"                shift, and go to state 17
    "`new`"              shift, and go to state 20
    INLINE               shift, and go to state 26
    "`fn`"               shift, and go to state 27
    "nil"                shift, and go to state 30
    "true"               shift, and go to state 31
    "false"              shift, and go to state 32

    identifier               go to state 39
    qname                    go to state 40
    fn-start-decl            go to state 49
    expression-list          go to state 60
    syntax-expression        go to state 59
    syntax-expression-wo-ii  go to state 43
    apostrophe-expression    go to state 44
    new-expression           go to state 45
    call-expression          go to state 46
    lambda-expression        go to state 47
    compound-expression      go to state 51


State 15

  156 syntax-expression-wo-ii: "`.`" . identifier

    IDENTIFIER  shift, and go to state 2

    identifier  go to state 61


State 16

  161 syntax-expression-wo-ii: "`*`" . syntax-expression

    STRING               shift, and go to state 1
    IDENTIFIER           shift, and go to state 2
    CONTEXT_IDENTIFIER   shift, and go to state 3
    RESERVED_IDENTIFIER  shift, and go to state 4
    CT_IDENTIFIER        shift, and go to state 5
    INTEGER_INDEX        shift, and go to state 6
    INTEGER              shift, and go to state 7
    DECIMAL              shift, and go to state 8
    DECIMAL_S            shift, and go to state 9
    "APOSTROPHE"         shift, and go to state 10
    "`::`"               shift, and go to state 11
    "`(`"                shift, and go to state 12
    "`[`"                shift, and go to state 13
    "`[[`"               shift, and go to state 14
    "`.`"                shift, and go to state 15
    "`*`"                shift, and go to state 16
    "`!`"                shift, and go to state 17
    "`new`"              shift, and go to state 20
    INLINE               shift, and go to state 26
    "`fn`"               shift, and go to state 27
    "nil"                shift, and go to state 30
    "true"               shift, and go to state 31
    "false"              shift, and go to state 32

    identifier               go to state 39
    qname                    go to state 40
    fn-start-decl            go to state 49
    syntax-expression        go to state 62
    syntax-expression-wo-ii  go to state 43
    apostrophe-expression    go to state 44
    new-expression           go to state 45
    call-expression          go to state 46
    lambda-expression        go to state 47
    compound-expression      go to state 51


State 17

  160 syntax-expression-wo-ii: "`!`" . syntax-expression

    STRING               shift, and go to state 1
    IDENTIFIER           shift, and go to state 2
    CONTEXT_IDENTIFIER   shift, and go to state 3
    RESERVED_IDENTIFIER  shift, and go to state 4
    CT_IDENTIFIER        shift, and go to state 5
    INTEGER_INDEX        shift, and go to state 6
    INTEGER              shift, and go to state 7
    DECIMAL              shift, and go to state 8
    DECIMAL_S            shift, and go to state 9
    "APOSTROPHE"         shift, and go to state 10
    "`::`"               shift, and go to state 11
    "`(`"                shift, and go to state 12
    "`[`"                shift, and go to state 13
    "`[[`"               shift, and go to state 14
    "`.`"                shift, and go to state 15
    "`*`"                shift, and go to state 16
    "`!`"                shift, and go to state 17
    "`new`"              shift, and go to state 20
    INLINE               shift, and go to state 26
    "`fn`"               shift, and go to state 27
    "nil"                shift, and go to state 30
    "true"               shift, and go to state 31
    "false"              shift, and go to state 32

    identifier               go to state 39
    qname                    go to state 40
    fn-start-decl            go to state 49
    syntax-expression        go to state 63
    syntax-expression-wo-ii  go to state 43
    apostrophe-expression    go to state 44
    new-expression           go to state 45
    call-expression          go to state 46
    lambda-expression        go to state 47
    compound-expression      go to state 51


State 18

   41 generic-statement: LET . let-decl

    IDENTIFIER       shift, and go to state 2
    "weak modifier"  shift, and go to state 64

    let-decl                      go to state 65
    let-decl-start                go to state 66
    let-decl-start-with-opt-type  go to state 67
    identifier                    go to state 68


State 19

   10 statement: EXTERN . VAR identifier "`:`" type-expr
   11          | EXTERN . "`fn`" fn-decl

    VAR     shift, and go to state 69
    "`fn`"  shift, and go to state 70


State 20

  176 new-expression: "`new`" . qname
  177               | "`new`" . apostrophe-expression
  178               | "`new`" . qname "`(`" argument-list-opt "`)`"
  179               | "`new`" . apostrophe-expression "`(`" argument-list-opt "`)`"

    IDENTIFIER    shift, and go to state 2
    "APOSTROPHE"  shift, and go to state 10
    "`::`"        shift, and go to state 11

    identifier             go to state 39
    qname                  go to state 71
    apostrophe-expression  go to state 72


State 21

   30 finished-statement: "`while`" . syntax-expression braced-statements
   31                   | "`while`" . syntax-expression "`;`" syntax-expression braced-statements
